import { h } from '@stencil/core';
import { newSpecPage } from '@stencil/core/testing';
import { MgCard } from '../mg-card';

const getPage = (props, slot) =>
  newSpecPage({
    components: [MgCard],
    template: () => <mg-card {...props}>{slot}</mg-card>,
  });

describe('mg-card', () => {
  test('render', async () => {
    const { root } = await getPage(
      {},
      'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.',
    );
    expect(root).toMatchSnapshot();
  });

  test('should have box-shadow when shadow is true', async () => {
    const { root } = await getPage({ shadow: true }, 'With shadow');
    const card = root.shadowRoot.querySelector('.mg-c-card');
    expect(card.classList.contains('mg-c-card--shadow')).toBe(true);
    expect(root).toMatchSnapshot();
  });

  test('should not have box-shadow by default', async () => {
    const { root } = await getPage({}, 'Without shadow');
    const card = root.shadowRoot.querySelector('.mg-c-card');
    expect(card.classList.contains('mg-c-card--shadow')).toBe(false);
    expect(root).toMatchSnapshot();
  });

  test('should have correct radius class', async () => {
    const { root } = await getPage({ radius: 'small' }, 'With small radius');
    const card = root.shadowRoot.querySelector('.mg-c-card');
    expect(card.classList.contains('mg-c-card--radius-small')).toBe(true);
    expect(root).toMatchSnapshot();
  });

  test('should not have radius class by default', async () => {
    const { root } = await getPage({}, 'With default radius');
    const card = root.shadowRoot.querySelector('.mg-c-card');
    expect(card.classList.contains('mg-c-card--radius-large')).toBe(false);
    expect(root).toMatchSnapshot();
  });
});
