// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-card render 1`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card">
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card should have box-shadow when shadow is true 1`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--shadow">
      <slot></slot>
    </div>
  </template>
  With shadow
</mg-card>
`;

exports[`mg-card should have correct radius class 1`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--radius-small">
      <slot></slot>
    </div>
  </template>
  With small radius
</mg-card>
`;

exports[`mg-card should not have box-shadow by default 1`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card">
      <slot></slot>
    </div>
  </template>
  Without shadow
</mg-card>
`;

exports[`mg-card should not have radius class by default 1`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card">
      <slot></slot>
    </div>
  </template>
  With default radius
</mg-card>
`;
